Removed special service common maven module and moved it to API
https://github.com/dropchop-com/recyclone/issues/22